# rust-bech32-altcoin

./: Cargo.toml  README.md
src/: constants.rs  lib.rs
