[package]
name = "altcoin-bech32"
version = "0.11.0"
authors = ["WakiyamaP"]
repository = "https://github.com/wakiyamap/rust-bech32-altcoin"
description = "Encodes and decodes Altcoin Segregated Witness addresses in Bech32"
readme = "README.md"
keywords = ["altcoin", "base32", "bech32", "encoding"]
categories = ["encoding"]
license = "MIT"

[features]
# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []

[dependencies]
bech32 = "0.7.1"
